Checkboxes and radio buttons alignment fix for all themes

--- a/skin/frontend/default/blank/css/reset.css
+++ b/skin/frontend/default/blank/css/reset.css
@@ -29,7 +29,7 @@ a:hover     {}
 h1          { font-size:20px; font-weight:normal; line-height:1.3; }
 h2          { font-size:18px; font-weight:normal; line-height:1.34; }
 h3          { font-size:16px; font-weight:bold; line-height:1.375; }
-h4          { font-size:14px; font-weight:bold; line-height:1.43; }
+h4          { font-size:14px; font-weight:bold; }
 h5          { font-size:12px; font-weight:bold; }
 h6          { font-size:11px; font-weight:bold; }
 
