--- a/skin/frontend/default/iphone/css/iphone.css
+++ b/skin/frontend/default/iphone/css/iphone.css
@@ -182,7 +182,6 @@ ul.breadcrumbs li { float:left; padding-right:5px; color:#818181; }
 .product-bundle-price { font:bold 11px/14px Arial; }
 .bundle-options dd { border-bottom:1px solid #ccc; padding:5px 0; margin:0 0 10px 0; }
 .bundle-options dd select { width:290px; }
-.product-options .options-list .label { display:inline; }
 
 ul.breadcrumbs { padding:0 5px; }
 
